--- a/정리글/React 정리글/공부 필요 과목.md
+++ b/정리글/React 정리글/공부 필요 과목.md
@@ -29,3 +29,19 @@ this.setState((state) => ({value : state.value + 1}));
 this.setState((state) => ({value : state.value + 1}));  
 this.setState((state) => ({value : state.value + 1}));
 이 경우 state는 3이 출력됩니다. React는 function을 매개변수로 받을 시 현재 state를 매개변수로 받아 처리된 object를 state에 적용합니다. (*"React will call it with the at-call-time-current state and expect you to return an Object to merge into state"*)
+
+## 6. jsconfig.json, Webpack resolve, Babel module-resolver
+Ctrl + Space는 VS Code 에디터의 자동 완성 단축키
+https://engineering.huiseoul.com/%EB%A6%AC%EC%95%A1%ED%8A%B8-%EC%83%81%EB%8C%80%EA%B2%BD%EB%A1%9C-%EC%A0%88%EB%8C%80%EA%B2%BD%EB%A1%9C-%EB%B3%80%EA%B2%BD-1485babb5198
+
+## 7. flex 속성을 알고 싶다면?
+Flexbox Froggy (http://flexboxfroggy.com/#ko)
+
+## 8. Web 기초
+### 8.1. HTTP
+https://developer.mozilla.org/ko/docs/Web/HTTP/Overview
+
+
+## 9. State는 최상위 Component에서 관리 하고 하위 Component는 Props로 데이터를 보여주자
+### 9.1. Data는 Top-Down으로 State는 Down-Top으로 구현
+State를 broadcast하기 위해서는 이벤트 발생시 관련 Component를 식별해야 하는데 ID가 겹치지 않아야 하는 문제점이 생긴다. 해당 문제점은 Component를 생성하는 당시의 시간을 사용한다. -> 시간은 계속 달라지기 때문이다.
