--- a/정리글/React 정리글/공부 필요 과목.md
+++ b/정리글/React 정리글/공부 필요 과목.md
@@ -41,10 +41,11 @@ Flexbox Froggy (http://flexboxfroggy.com/#ko)
 ### 8.1. HTTP
 https://developer.mozilla.org/ko/docs/Web/HTTP/Overview
 
-
 ## 9. State는 최상위 Component에서 관리 하고 하위 Component는 Props로 데이터를 보여주자
 ### 9.1. Data는 Top-Down으로 State는 Down-Top으로 구현
 State를 broadcast하기 위해서는 이벤트 발생시 관련 Component를 식별해야 하는데 ID가 겹치지 않아야 하는 문제점이 생긴다. 해당 문제점은 Component를 생성하는 당시의 시간을 사용한다. -> 시간은 계속 달라지기 때문이다.
 
+### 9.2 Scope Context 를 사용하는 방법은 왜 없는가?
+생각해보면 JSX는 Javascript 객체이고 객체에서 function을 호출하게 되면 해당 module에 scope chain으로 참조할 수 있을 거 같은데 왜 안될까?
 
 ## 10. 일반 function도 JSX처럼 사용 가능한가?
